--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Aleksey Eltcov</title>
+	<title>PanSeek</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -15,25 +15,21 @@
 	<div id="particles-js">
 		<div class="main-content">
 			<figure>
-				<img src="images/profile_img.ico" alt="Aleksey Eltcov">
+				<img src="images/profile_img.ico" alt="PanSeek">
 			</figure>
-			<h1>Aleksey Eltcov</h1>
-			<h2>twsunset</h2>
+			<h1>Panseek</h1>
 			<ul class="social">
-				<li><a href="https://vk.com/twsunset" target="_blank">VK</a></li>
-				<li><a href="https://4pda.ru/forum/index.php?showuser=4941828" target="_blank">4PDA</a></li>
-				<li><a href="https://www.instagram.com/twsunset" target="_blank">Instagram</a></li>
-				<li><a href="https://t.me/twsunset" target="_blank">Telegram</a></li>
-				<li><a href="https://github.com/twsunset" target="_blank">GitHub</a></li>
-				<li><a href="https://shikimori.one/twsunset" target="_blank">Shikimori</a></li>				
+				<li><a href="https://github.com/panseek"><i class="icon icon-github"></i></a></li>
+				<li><a href="https://www.instagram.com/panseek" target="_blank"><i class="icon icon-instagram"></i></a></li>
+				<li><a href="https://t.me/panseek" target="_blank"><i class="icon icon-telegram"></i></a></li>
+				<li><a href="https://shikimori.one/panseek" target="_blank">Shikimori</a></li>				
 			</ul>
 		</div>
 		<footer id="footer">
-			&copy; 2020 Aleksey Eltcov
+			&copy; 2020 PanSeek
 		</footer>
 	</div>
 	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
-
