--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			</figure>
 			<h1>Panseek</h1>
 			<ul class="social">
-				<li><a href="https://github.com/panseek"><i class="icon icon-github"></i></a></li>
-				<li><a href="https://www.instagram.com/panseek" target="_blank"><i class="icon icon-instagram"></i></a></li>
-				<li><a href="https://t.me/panseek" target="_blank"><i class="icon icon-telegram2"></i></a></li>
-				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank"><i class="icon icon-youtube2"></i></a></li>
+				<li><a href="https://github.com/panseek" target="_blank">GitHub</a></li>
+				<li><a href="https://www.instagram.com/panseek" target="_blank">Instagram</a></li>	
+				<li><a href="https://t.me/panseek" target="_blank">Telegram</a></li>	
+				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>	
 				<li><a href="https://shikimori.one/panseek" target="_blank">Shikimori</a></li>				
 			</ul>
 		</div>
