--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li><a href="https://www.instagram.com/panseek" target="_blank">Instagram</a></li>	
 				<li><a href="https://t.me/panseek" target="_blank">Telegram</a></li>	
 				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>	
-				<li><a href="https://shikimori.one/panseek" target="_blank">Shikimori</a></li>				
+				<li><a href="https://shikimori.one/PanSeek" target="_blank">Shikimori</a></li>				
 			</ul>
 		</div>
 		<footer id="footer">
