--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 			</figure>
 			<h1>Panseek</h1>
 			<ul class="social">
-				<li><a href="https://github.com/panseek" target="_blank">GitHub</a></li>
-				<li><a href="https://www.instagram.com/panseek" target="_blank">Instagram</a></li>	
-				<li><a href="https://t.me/panseek" target="_blank">Telegram</a></li>	
-				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>	
-				<li><a href="https://shikimori.one/PanSeek" target="_blank">Shikimori</a></li>				
+				<li><a href="https://github.com/panseek" target="_blank">"icon icon-github"</a></li>
+				<li><a href="https://www.instagram.com/panseek" target="_blank">"icon icon-instagram"</a></li>	
+				<li><a href="https://t.me/panseek" target="_blank">"icon icon-telegram"</a></li>	
+				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">"icon icon-youtube"</a></li>	
+				<li><a href="https://shikimori.one/PanSeek" target="_blank">"icon icon-tv"</a></li>				
 			</ul>
 		</div>
 		<footer id="footer">
