--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 			</figure>
 			<h1>Panseek</h1>
 			<ul class="social">
-				<li><a href="https://github.com/panseek" target="_blank">"icon icon-github"</a></li>
-				<li><a href="https://www.instagram.com/panseek" target="_blank">"icon icon-instagram"</a></li>	
-				<li><a href="https://t.me/panseek" target="_blank">"icon icon-telegram"</a></li>	
-				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">"icon icon-youtube"</a></li>	
-				<li><a href="https://shikimori.one/PanSeek" target="_blank">"icon icon-tv"</a></li>				
+				<li><a href="https://github.com/panseek" target="_blank"><i class="icon icon-github"></a></li>
+				<li><a href="https://www.instagram.com/panseek" target="_blank"><i class="icon icon-instagram"></a></li>	
+				<li><a href="https://t.me/panseek" target="_blank"><i class="icon icon-telegram"></a></li>	
+				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank"><i class="icon icon-youtube"></a></li>	
+				<li><a href="https://shikimori.one/PanSeek" target="_blank"><i class="icon icon-tv"></a></li>				
 			</ul>
 		</div>
 		<footer id="footer">
-			&copy; 2020 PanSeek
+			&copy; 2021 PanSeek
 		</footer>
 	</div>
 	<script src="js/particles.js"></script>
