--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<ul class="social">
 				<li><a href="https://github.com/panseek"><i class="icon icon-github"></i></a></li>
 				<li><a href="https://www.instagram.com/panseek" target="_blank"><i class="icon icon-instagram"></i></a></li>	
-				<li><a href="https://t.me/panseek" target="_blank"><i class="icon icon-telegram"></i></a></li>	
+				<li><a href="https://t.me/panseek"><i class="icon icon-telegram"></i></a></li>	
 				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank"><i class="icon icon-youtube"></i></a></li>	
 				<li><a href="https://shikimori.one/PanSeek" target="_blank">SHIKI</a></li>				
 			</ul>
