--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 			<figure>
 				<img src="images/profile_img.ico" alt="PanSeek">
 			</figure>
-			<h1>Panseek</h1>
+			<h1>PanSeek</h1>
 			<ul class="social">
-				<li><a href="https://github.com/panseek"><i class="icon icon-github"></i></a></li>
+				<li><a href="https://github.com/panseek" target="_blank"><i class="icon icon-github"></i></a></li>
 				<li><a href="https://www.instagram.com/panseek" target="_blank"><i class="icon icon-instagram"></i></a></li>	
-				<li><a href="https://t.me/panseek"><i class="icon icon-telegram"></i></a></li>	
+				<li><a href="https://t.me/panseek" target="_blank"><i class="icon icon-telegram"></i></a></li>	
 				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank"><i class="icon icon-youtube"></i></a></li>	
 				<li><a href="https://shikimori.one/PanSeek" target="_blank">SHIKI</a></li>				
 			</ul>
