--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 			</figure>
 			<h1>PanSeek</h1>
 			<ul class="social">
-				<li><a href="https://github.com/panseek" target="_blank"><i class="icon icon-github"></i></a></li>
-				<li><a href="https://www.instagram.com/panseek" target="_blank"><i class="icon icon-instagram"></i></a></li>	
-				<li><a href="https://t.me/panseek" target="_blank"><i class="icon icon-telegram"></i></a></li>	
-				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank"><i class="icon icon-youtube"></i></a></li>	
-				<li><a href="https://shikimori.one/PanSeek" target="_blank">SHIKI</a></li>				
+				<li><a href="https://github.com/panseek" target="_blank">GitHub</a></li>
+				<li><a href="https://www.instagram.com/panseek" target="_blank">Instagram</a></li>	
+				<li><a href="https://t.me/panseek" target="_blank">Telegram</a></li>	
+				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>	
+				<li><a href="https://shikimori.one/PanSeek" target="_blank">Shikimori</a></li>				
 			</ul>
 		</div>
 		<footer id="footer">
