--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 			<h1>PanSeek</h1>
 			<ul class="social">
 				<li><a href="https://github.com/panseek" target="_blank">GitHub</a></li>
-				<li><a href="https://www.instagram.com/panseek" target="_blank">Instagram</a></li>	
-				<li><a href="https://t.me/panseek" target="_blank">Telegram</a></li>	
-				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>	
-				<li><a href="https://shikimori.one/PanSeek" target="_blank">Shikimori</a></li>				
+				<li><a href="https://www.instagram.com/panseek" target="_blank">Instagram</a></li>
+				<li><a href="https://t.me/panseek" target="_blank">Telegram</a></li>
+				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>
+				<li><a href="https://shikimori.one/PanSeek" target="_blank">Shikimori</a></li>
+				<li><a href="https://www.blast.hk/members/101524" target="_blank">BH</a></li>
 			</ul>
 		</div>
 		<footer id="footer">
