--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<li><a href="https://www.youtube.com/user/EvgenyhPl" target="_blank">YouTube</a></li>
 				<li><a href="https://shikimori.one/PanSeek" target="_blank">Shikimori</a></li>
 				<li><a href="https://www.blast.hk/members/101524" target="_blank">BH</a></li>
+				<li><a href="https://boosty.to/panseek" target="_blank">Boosty</a></li>
 			</ul>
 		</div>
 		<footer id="footer">
