--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</ul>
 		</div>
 		<footer id="footer">
-			&copy; 2021 PanSeek
+			&copy; Ryan Andri
 		</footer>
 	</div>
 	<script src="js/particles.js"></script>
